--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,7 @@
                 "home": "Home",
                 "work": "Work",
                 "blog": "Blog",
+                "about": "About",
                 "contact": "Contact"
             },
 
