feat: Enhance IndexHero component with animated background and improved scroll functionality
- Added motion-v for animations in IndexHero.vue, including animated background particles and smooth scrolling to sections.
- Updated package.json to include motion-v and vue-carousel dependencies.
- Refactored IndexWork.vue to simplify scrolling logic and enhance performance.
- Modified LayoutFooter.vue and LayoutHeader.vue for improved branding and social links.
- Implemented responsive mobile menu with animations in LayoutHeader.vue.
- Updated AppLayout.vue to utilize motion for cursor effects.
- Improved Welcome.vue structure for better layout and animation.

--- a/lang/bg.json
+++ b/lang/bg.json
@@ -1,15 +1,19 @@
 {
-    "hero": {
-        "greeting": "Здравейте, аз съм Trephy",
-        "description": {
-            "part1": "Разработчик, който обича да",
-            "part2": " спиращи дъха дигитални изживявания."
-        },
-        "verbSize": "5",
-        "verbs": ["проектира", "кодира", "създава", "изгражда", "разгръща"]
-    },
+   "hero": {
+  "button": {
+    "work": "Виж моите проекти",
+    "contact": "Свържи се с мен"
+  },
+  "greeting": "Здравей, аз съм Данаил",
+  "description": {
+    "part1": "Помагам на предприемачите да",
+    "part2": " своя бизнес, онлайн, без главоболия"
+  },
+  "verbs": ["създадат", "рекламират", "оптимизират", "изградят", "развиват"],
+  "verbSize": "5"
+},
     "header": {
-        "brand": "Trephy",
+        "brand": "Портфолио",
         "nav": {
             "home": "Начало",
             "about": "За мен",
@@ -20,12 +24,12 @@
 
     "about": {
         "title": "ЗА МЕН",
-        "greeting": "Здравейте, аз съм Trephy",
+        "greeting": "Здравейте, аз съм Данаил",
         "intro": {
             "part1": "запален",
             "part2": "уеб разработчик и ентусиаст по киберсигурност."
         },
-        "description": "Опирайки се на богат опит с различни технологии и рамки, аз съм специализиран в създаването на дигитални изживявания, които са едновременно безпроблемни и лесни за използване. Гордея се с проектирането на интуитивни, визуално ангажиращи интерфейси и разработването на стабилни приложения с прецизно внимание към детайла. Моят фокус е върху предоставянето на изпипани, професионални решения, които постоянно надминават очакванията."
+        "description": "Работя с бизнеси и предприемачи, за да създавам модерни и ефективни уеб решения, които им помагат да се откроят и да привлекат повече клиенти. За мен дизайнът и функционалността вървят ръка за ръка – всяка страница, която изграждам, е насочена към това да бъде не само красива, но и стратегически ориентирана към резултати. Разбирам колко важно е първото впечатление, затова подхождам с внимание към детайла, ясен фокус върху потребителското изживяване и силно послание, което говори на вашата аудитория. Целта ми е проста – да ви помогна да постигнете растеж, доверие и реални бизнес резултати чрез силно онлайн присъствие."
     },
     "projects": {
         "title": "Проекти",
